argo-cd/src/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - ${PROMETHEUS_HOST}
    - ${GRAFANA_HOST}
    - ${ALERTMANAGER_HOST}
    secretName: monitoring-tls
  rules:
  - host: ${PROMETHEUS_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  - host: ${GRAFANA_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: ${ALERTMANAGER_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager
            port:
              number: 9093
